# TongXinChat

./: LICENSE  README.md
Client/: CMakeLists.txt  CMakePresets.json  main.cpp
SCat-Client/: CMakeLists.txt  NoFrame.cpp  NoFrame.h  framelesswindow.cpp  framelesswindow.h  main.cpp  resource.qrc
SCat-Client/Chat/include/: ChatWindow.h
SCat-Client/Chat/src/: ChatNetWork.cpp  ChatWindow.cpp
SCat-Client/Friend/include/: FriendList.h  FriendListitem.h
SCat-Client/Friend/src/: AddFriend.cpp  AddFriendWindow.cpp  DeleteFriend.cpp  FriendList.cpp  FriendListitem.cpp  SearchFriend.cpp
SCat-Client/Login/include/: Login.h  LoginWindow.h
SCat-Client/Login/src/: Login.cpp  LoginWindow.cpp
SCat-Client/NetWork/include/: NetWorkManager.h
SCat-Client/NetWork/src/: NetWorkManager.cpp
SCat-Client/Other/include/: FileWork.h
SCat-Client/Other/src/: FileWork.cpp  Notification.cpp
SCat-Client/Register/include/: Register.h  RegisterWindow.h
SCat-Client/Register/src/: Register.cpp  RegisterWindow.cpp
SCat-Client/Scat/include/: ScatWindow.h
SCat-Client/Scat/src/: ScatWindow.cpp
test01/: main.cpp  test01.slnx  test01.vcxproj
